updated phone and email to form-control [Deploy: Production]

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -76,10 +76,10 @@
                                     <div class="col" id="contact-info">
                                         <h4>Great! Leave your contact information and we'll get back to you.</h4>
                                         <label class="sr-only" for="phone-call">Phone Number: </label>
-                                        <input type="tel" name="phone-num" id="phone-num" class="form-group" placeholder="Phone" tabindex="1">
+                                        <input type="tel" name="phone-num" id="phone-num" class="form-control" placeholder="Phone" tabindex="1">
                                         <br>
                                         <label class="sr-only" for="email">Email Address: </label>
-                                        <input type="email" id="email" name="email" id="email"class="form-group" placeholder="Email" tabindex="1">
+                                        <input type="email" id="email" name="email" id="email"class="form-control" placeholder="Email" tabindex="1">
                                     </div>
                                 </div>
                             </div>
