--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -48,14 +48,14 @@
                                 </div>
 
                                 <div class="form-check">
-                                    <label class="form-check-label" for="attend">I attend The Rock Church </label>
                                     <input class="form-check-input" type="checkbox" id="attend" name="attend" value="attend">
+                                    <label class="form-check-label" for="attend">I attend The Rock Church </label>
                                 </div>
                             </div>
 
                             <div class="form-check">
-                                <label class="form-check-label" for="intercession">This prayer request is for someone else </label>
                                 <input class="form-check-input" type="checkbox" id="intercession" name="intercession" value="intercession">
+                                <label class="form-check-label" for="intercession">This prayer is for someone else </label>
 
                                 <div class="reveal-if-active">
                                     <div class="col" id="recipient-name">
@@ -69,12 +69,11 @@
                             </div>
 
                             <div class="form-check">
-                                <label class="form-check-label" for="request-contact">I would like to be contacted </label>
                                 <input class="form-check-input" type="checkbox" name="request-contact" id="request-contct" value="request-contact">
+                                <label class="form-check-label" for="request-contact">I would like to be contacted </label>
 
                                 <div class="reveal-if-active">
                                     <div class="col" id="contact-info">
-                                        <h4>Great! Leave your contact information and we'll get back to you.</h4>
                                         <label class="sr-only" for="phone-call">Phone Number: </label>
                                         <input type="tel" name="phone-num" id="phone-num" class="form-control" placeholder="Phone" tabindex="1">
                                         <br>
@@ -83,9 +82,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <br />
-                            <br />
 
                             <div class="form-group">
                                 <label class="sr-only" for="category">Category:</label>
@@ -126,4 +122,5 @@
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
+    <!-- He deserves more -->
 </html>
