added a button on admin to enter prayer requests [Deploy: Production]

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -108,6 +108,8 @@
                     </div> <!-- /.modal-body -->
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <!-- Pass is-admin=False when a prayer request is being added by a user.  -->
+                        <input type="hidden" name="is-admin" value="False">
                         <button type="submit" class="btn btn-primary">Send Your Request</button>
                     </div> <!-- /.modal-footer -->
                     </form>
