--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -102,7 +102,8 @@
 
                             <div class="form-group">
                                 <label class="sr-only" for="prayer-request">Request:</label>
-                                <textarea class="form-control" name="prayer-request" id="prayer-request" placeholder="Your Prayer Here" rows="5" required></textarea>
+                                <textarea class="form-control" name="prayer-request" id="prayer-request" placeholder="Your Prayer Here" rows="5" maxlength="300" required></textarea>
+                                <div id="characters-remaining">300</div>
                             </div> <!-- /.form-group -->
 
                     </div> <!-- /.modal-body -->
@@ -133,6 +134,7 @@
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/form.js"></script>
+        <script src="js/character-count.js"></script>
     </body>
     <!-- He deserves more -->
 </html>
