--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -94,9 +94,10 @@
                             <div class="form-group">
                                 <label class="sr-only" for="category">Category:</label>
                                 <select class="custom-select custom-select-sm" name="category" id="category">
-                                    <option value="physical">Healing</option><!-- change to "healing" -->
+                                    <option value="physical">Healing</option>
                                     <option value="provision">Provision</option>
                                     <option value="salvation">Salvation</option>
+                                    <option value="circumstances">Circumstances</option>
                                 </select>
                             </div> <!-- /.form-group -->
 
