--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -39,7 +39,7 @@
                         <br />
 
                         <form id="request-form" action="receive_prayer_request.php" method="post">
-                            
+
                             <!-- Enter Prayer's personal information or remain anonymous if box is checked and user info fields will disappear -->
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="anonymous" name="anonymous" value="anonymous">
@@ -90,7 +90,7 @@
                             <div class="form-group">
                                 <label class="sr-only" for="category">Category:</label>
                                 <select class="custom-select custom-select-sm" name="category" id="category">
-                                    <option value="physical">Healing</option>
+                                    <option value="healing">Healing</option>
                                     <option value="provision">Provision</option>
                                     <option value="salvation">Salvation</option>
                                     <option value="circumstances">Circumstances</option>
