stop tracking doc folder in git

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -19,6 +19,8 @@
         Request Prayer
     </button>
 
+<p style="color:grey;"></p>
+
     <div class="modal fade" id="myModal" tabindex="1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
