--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -51,14 +51,14 @@
                                 </div> <!-- /.user-info -->
                             </div> <!-- /.hide-if-active -->
                             <div class="reveal-if-active">
-                                <p>The Rock Church won't keep track of your personal information.</p>
+                                <p>The church won't keep track of your personal information.</p>
                             </div> <!-- /.reveal-if-active -->
                         </div> <!-- form-check -->
 
                         <!-- Sets the Prayer's attendance value with checkbox value -->
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="attend" name="attend" value="attend">
-                            <label class="form-check-label" for="attend">I attend The Rock Church </label>
+                            <label class="form-check-label" for="attend">I attend the church </label>
                         </div> <!-- /.form-check -->
 
                         <!-- Enter the Prayer's recipient if it is different than the users. If the box is checked the fields will become visible -->
@@ -70,9 +70,6 @@
                                     <label class="sr-only" for="prayer-is-for">Person getting prayer: </label>
                                     <input class="require-if-active" type="text" name="prayer-is-for" id="prayer-is-for"
                                         placeholder="For:" tabindex="1" maxlength="30" data-require-pair="#intercession">
-                                    <!-- <label class="sr-only" for="for-last">Last Name: </label>
-                                    <input class="require-if-active" type="text" name="for-last" id="for-last"
-                                        placeholder="Last Name" tabindex="1" data-require-pair="#intercession"> -->
                                 </div> <!-- /.recipient-name -->
                             </div> <!-- /.reveal-if-active -->
                         </div> <!-- form-check -->
